test/spec_vectors/block/fail/module_19.wat
(module (func $type-value-f32-vs-void (block (f32.const 1.0))))